<resources>
    <string name="app_name">Bibaboba</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="bibaboba_demands_your_data">Bibaboba demands your data!</string>
    <string name="Enter_name">Enter name:</string>
    <string name="Enter_your_email">Enter your email:</string>
    <string name="Enter_date_of_birth">Enter your databirth (dd/mm/yyyy):</string>
    <string name="Enter_mobile">Enter your mobile phone number:</string>
    <string name="Enter_password">Enter password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="click_here_to_reset">CLICK HERE TO RESET</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="app_register">Register!</string>
    <string name="by_email">By email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="registerr">Register</string>
    <string name="by_number">By number</string>
    <string name="welcome_to_the_content_screen">Welcome to the content screen!</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="enter_email_or_phone">Enter email or phone</string>
    <string name="enter_password">Enter password</string>
    <string name="loginn">Login</string>
    <string name="do_not_have_an_accountt">Do not have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="first_fragment_placeholder">First Fragment Placeholder</string>
    <string name="second_fragment_placeholder">Second Fragment Placeholder</string>
    <string name="this_is_the_second_fragment">This is the Second Fragment</string>
    <string name="this_is_the_first_fragment">This is the First Fragment</string>
    <string name="game_image">Game image</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="release_date">Release Date</string>
    <string name="game_name">Game Name</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="back_to_login">LOGIN BACK</string>
</resources>