<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/game_image"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/gameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/gameDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"/>

            <TextView
                android:id="@+id/gamePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"/>

            <TextView
                android:id="@+id/gameRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
