<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment"
    android:background="@drawable/ic_sonic_coins_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_head"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/bibaboba_demands_your_data"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="361dp"
            android:layout_height="97dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="6dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/ic_sonic2" />

        <Button
            android:id="@+id/button_by_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_number"
            android:layout_marginEnd="10dp"
            android:background="@color/gray_500"
            android:layout_below="@id/imageView_logo"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/button_by_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_email"
            android:gravity="center"
            android:background="@color/gray_500"
            android:layout_toEndOf="@id/button_by_phone"
            android:layout_alignBaseline="@id/button_by_phone" />

        <TextView
            android:id="@+id/textView_register_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/button_by_email"
            android:layout_marginTop="10dp"
            android:text="@string/Enter_your_email"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_email"
            android:inputType="textEmailAddress"
            android:layout_below="@id/textView_register_email"
            android:hint="@string/enter_your_email"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:textSize="20sp"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_mobile"
            android:layout_below="@id/editText_register_email"
            android:text="@string/Enter_mobile"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="@color/black"
            tools:ignore="SmallSp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_mobile"
            android:inputType="phone"
            android:layout_below="@id/textView_register_mobile"
            android:hint="@string/enter_your_phone"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:textSize="20sp"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_password"
            android:layout_below="@id/editText_register_mobile"
            android:text="@string/Enter_password"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:inputType="textPassword"
            android:layout_below="@id/textView_register_password"
            android:hint="@string/enter_your_password"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:textSize="20sp"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:layout_below="@id/editText_register_password"
            android:text="@string/confirm_password"
            android:layout_marginTop="10dp"
            android:textSize="10sp"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_confirm_password"
            android:inputType="textPassword"
            android:layout_below="@id/textView_register_confirm_password"
            android:hint="@string/confirm_your_password"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:textSize="20sp"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/editText_register_confirm_password"
            android:layout_marginTop="20dp"
            android:text="@string/registerr"
            android:background="@color/gray_500" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>
