<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sonic_coins_background"
        tools:context=".LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RL_email"
                android:layout_marginTop="120dp"
                android:background="@drawable/border">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/imageViewEmail"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:id="@+id/editText_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_toEndOf="@id/imageViewEmail"
                    android:hint="@string/enter_email_or_phone"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:inputType="textEmailAddress" /> 

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RL_pwd"
                android:layout_below="@id/RL_email"
                android:background="@drawable/border"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/imageViewPwd"
                    android:src="@drawable/ic_pwd_bw"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <EditText
                    android:id="@+id/editText_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageViewPwd"
                    android:background="@android:color/transparent"
                    android:hint="@string/enter_password"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="12dp"
                    android:minHeight="48dp"
                    android:textSize="20sp"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="165dp"
                android:layout_gravity="center"
                android:text="@string/loginn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_login"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_accountt"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView_register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/textView_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textAlignment="center"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/textView_forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_here_to_reset"
                android:textAlignment="center"
                android:textColor="@color/purple_700" />

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
