<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sonic_coins_background"
    tools:context="com.byankina.bibaboba.MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="188dp"
            android:layout_height="155dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:maxWidth="180dp"
            app:srcCompat="@drawable/ic_sonic" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:text="@string/login"
            android:background="@color/gray_500"/>

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:layout_marginTop="30dp"
            android:text="@string/do_not_have_an_account"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView_register_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_register"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textAlignment="center" />

    </RelativeLayout>

</ScrollView>